maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: ')' expected but integer literal found.
		} else if (random3() ==1 0) {
                                         ^RandomMouseMaze:11: error: illegal start of simple expression
	}
        ^